--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jira ticket description",
+  "name": "Jira description generator",
   "version": "1.0",
   "description": "Generate description",
   "permissions": ["activeTab", "declarativeContent", "storage"],
@@ -7,7 +7,6 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "options_page": "options.html",
   "page_action": {
     "default_popup": "popup.html",
     "default_icon": {
